deploy/etc/deployments/zeta-ingress.yml
#
# SPDX-License-Identifier: MIT
#
# Copyright (c) 2020 The Authors.
# Authors: Bin Liang  <@liangbin>
#
# Summary: zeta-ingress definition
#
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  namespace: default
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
    controller: k8s.io/ingress-nginx
    parameters:
      scope: Namespace
      kind: IngressParameters
      namespace: ingress
      name: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zeta-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zeta-manager
            port:
              number: 5000
